[gd_scene load_steps=3 format=3 uid="uid://d3icps2fqwrip"]

[ext_resource type="Script" path="res://Scripts/UI/Inventory/inventory.gd" id="1_u5o36"]
[ext_resource type="PackedScene" uid="uid://vgda3jrpvbei" path="res://Scenes/UI/ItemSlot.tscn" id="1_wimrg"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u5o36")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.157659, 0.347832, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="ItemSlotList" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ItemSlot0" parent="VBoxContainer/ItemSlotList" instance=ExtResource("1_wimrg")]
layout_mode = 2
is_selected = true
is_equipped = true

[node name="ItemSlot1" parent="VBoxContainer/ItemSlotList" instance=ExtResource("1_wimrg")]
layout_mode = 2
is_selected = true
is_equipped = true
equipment_index = 1

[node name="ItemSlot2" parent="VBoxContainer/ItemSlotList" instance=ExtResource("1_wimrg")]
layout_mode = 2
is_selected = true
is_equipped = true
equipment_index = 2

[node name="ItemSlot3" parent="VBoxContainer/ItemSlotList" instance=ExtResource("1_wimrg")]
layout_mode = 2
is_selected = true
is_equipped = true
equipment_index = 3

[node name="ItemSlot4" parent="VBoxContainer/ItemSlotList" instance=ExtResource("1_wimrg")]
layout_mode = 2
is_selected = true
is_equipped = true
equipment_index = 4

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ItemList" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
columns = 4

[connection signal="item_equipment_selected_changed" from="VBoxContainer/ItemSlotList/ItemSlot0" to="." method="switch_selected_item_equipment"]
[connection signal="item_equipment_selected_changed" from="VBoxContainer/ItemSlotList/ItemSlot1" to="." method="switch_selected_item_equipment"]
[connection signal="item_equipment_selected_changed" from="VBoxContainer/ItemSlotList/ItemSlot2" to="." method="switch_selected_item_equipment"]
[connection signal="item_equipment_selected_changed" from="VBoxContainer/ItemSlotList/ItemSlot3" to="." method="switch_selected_item_equipment"]
[connection signal="item_equipment_selected_changed" from="VBoxContainer/ItemSlotList/ItemSlot4" to="." method="switch_selected_item_equipment"]
